ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:  
            name: oms-server-service
            port:  
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oms-client-service
            port:
              number: 80
